<resources>
    <string name="app_name">PopMovies</string>

    <!--Main activity-->

    <string name="toast_error_connectivity_problem">Connectivity problem occured.</string>
    <string name="toast_error_general_problem">Something went wrong</string>

    <string name="action_settings_label">Settings</string>


    <!-- Movie details activity -->

    <string name="video_row_view_tag" translatable="false">this_is_as_unique_as_it_gets</string>
    <string name="movie_details_release_date_label">Release date:</string>
    <string name="movie_details_videos_heading">Videos</string>
    <string name="movie_details_heading_reviews">Reviews</string>
    <string name="movie_details_review_section_author_label">Author:</string>


    <!-- Settings Activity -->

    <string name="avtivity_label_settings">Settings</string>

    <string name="pref_switch_sync_key" translatable="false">sync_favorites</string>
    <string name="pref_switch_sync_summary_off">No</string>
    <string name="pref_switch_sync_summary_on">Yes</string>
    <string name="pref_switch_sync_title">Synchronize favorites</string>

    <string name="pref_list_sync_interval_key" translatable="false">sync_favorites_interval</string>
    <string name="pref_list_sync_interval_title">Sync interval</string>


    <string name="pref_list_interval_label_1">1 hour</string>
    <string name="pref_list_interval_label_3">3 hours</string>
    <string name="pref_list_interval_label_6">6 hours</string>
    <string name="pref_list_interval_label_12">12 hours</string>

    <string name="pref_list_interval_value_1" translatable="false">1</string>
    <string name="pref_list_interval_value_3" translatable="false">3</string>
    <string name="pref_list_interval_value_6" translatable="false">6</string>
    <string name="pref_list_interval_value_12" translatable="false">12</string>

</resources>
